--- a/ecommerce-backend/package.json
+++ b/ecommerce-backend/package.json
@@ -21,9 +21,11 @@
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "moment": "^2.29.0",
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "query-string": "^6.13.2",
     "uuid": "^8.3.0"
   }
 }
