--- a/ecommerce-backend/package.json
+++ b/ecommerce-backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "braintree": "^3.1.0",
     "cookie-parse": "^0.4.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
